--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE >
 <head>
 <meta  charset="utf-8" />
-<title>无标题文档</title>
+<title>ECOM首页</title>
 <link href="style.css" rel="stylesheet"/>
 <script src="js/jquery-3.1.1.js"></script>
 <script src="js/js.js"></script>
